--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -8,7 +8,8 @@
 
 .about {
   width: 100%;
-  height: calc(100vh - 100px);
+  min-height: calc(100vh - 100px);
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -42,7 +43,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  height: calc(100vh - 200px);
+  min-height: calc(100vh - 200px);
 }
 
 .skills h1 {
